--- a/ResignFisrtResponder/Base.lproj/Main.storyboard
+++ b/ResignFisrtResponder/Base.lproj/Main.storyboard
@@ -40,6 +40,14 @@
                                     <segue destination="Fbe-7w-WLL" kind="modal" id="l37-v0-Rmv"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rM6-bJ-xDE">
+                                <rect key="frame" x="145" y="414" width="30" height="30"/>
+                                <animations/>
+                                <state key="normal" title="test"/>
+                                <connections>
+                                    <segue destination="u8F-Rx-aEh" kind="push" id="zb0-4T-vac"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -54,6 +62,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="662" y="293"/>
+        </scene>
+        <!--Test View Controller-->
+        <scene sceneID="Uge-7d-WH1">
+            <objects>
+                <viewController id="u8F-Rx-aEh" customClass="TestViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tx4-3r-zS5"/>
+                        <viewControllerLayoutGuide type="bottom" id="ztA-KQ-uJw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fLj-Ks-hst">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MX5-zz-Vdj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="210-bg-ygu">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rUY-qE-Vbw">
+                                                <rect key="frame" x="112" y="103" width="97" height="30"/>
+                                                <animations/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <animations/>
+                                        <color key="backgroundColor" red="0.62745098040000002" green="0.83921568629999999" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="800" id="5yJ-Te-5td"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstItem="210-bg-ygu" firstAttribute="centerX" secondItem="MX5-zz-Vdj" secondAttribute="centerX" id="AFD-Bc-2nD"/>
+                                    <constraint firstItem="210-bg-ygu" firstAttribute="leading" secondItem="MX5-zz-Vdj" secondAttribute="leading" id="TxC-gu-Gy5"/>
+                                    <constraint firstItem="210-bg-ygu" firstAttribute="top" secondItem="MX5-zz-Vdj" secondAttribute="top" id="WXu-cQ-It3"/>
+                                    <constraint firstAttribute="trailing" secondItem="210-bg-ygu" secondAttribute="trailing" id="cxV-Hm-8Bs"/>
+                                    <constraint firstAttribute="bottom" secondItem="210-bg-ygu" secondAttribute="bottom" constant="-232" id="mYP-eI-Mva"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MX5-zz-Vdj" firstAttribute="leading" secondItem="fLj-Ks-hst" secondAttribute="leading" id="LdN-wS-gSy"/>
+                            <constraint firstItem="MX5-zz-Vdj" firstAttribute="top" secondItem="tx4-3r-zS5" secondAttribute="bottom" constant="-64" id="ROA-od-QYU"/>
+                            <constraint firstItem="MX5-zz-Vdj" firstAttribute="centerX" secondItem="fLj-Ks-hst" secondAttribute="centerX" id="dGv-Qe-C15"/>
+                            <constraint firstAttribute="trailing" secondItem="MX5-zz-Vdj" secondAttribute="trailing" id="fnu-ux-R46"/>
+                            <constraint firstItem="ztA-KQ-uJw" firstAttribute="top" secondItem="MX5-zz-Vdj" secondAttribute="bottom" id="ggr-eu-x1e"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="WsE-6N-4W9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fm8-ej-0Cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="653" y="957"/>
         </scene>
         <!--Prensent View Controller-->
         <scene sceneID="sTX-4Q-MH1">
@@ -75,6 +141,19 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="joC-PG-gTK">
+                                <rect key="frame" x="40" y="79" width="240" height="128"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7aq-cL-MLb">
+                                        <rect key="frame" x="72" y="49" width="97" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
