--- a/ResignFisrtResponder/Base.lproj/Main.storyboard
+++ b/ResignFisrtResponder/Base.lproj/Main.storyboard
@@ -72,50 +72,66 @@
                         <viewControllerLayoutGuide type="bottom" id="ztA-KQ-uJw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fLj-Ks-hst">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MX5-zz-Vdj">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z87-Uw-1v2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="210-bg-ygu">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rRS-gR-HII">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="800"/>
                                         <subviews>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rUY-qE-Vbw">
-                                                <rect key="frame" x="112" y="103" width="97" height="30"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7Gj-4W-soT">
+                                                <rect key="frame" x="67" y="654" width="240" height="128"/>
                                                 <animations/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="5JD-lN-2vY"/>
+                                                </constraints>
+                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                         </subviews>
                                         <animations/>
-                                        <color key="backgroundColor" red="0.62745098040000002" green="0.83921568629999999" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="800" id="5yJ-Te-5td"/>
+                                            <constraint firstItem="7Gj-4W-soT" firstAttribute="leading" secondItem="rRS-gR-HII" secondAttribute="leading" constant="67" id="Gwm-23-9lM"/>
+                                            <constraint firstAttribute="height" constant="800" id="PtJ-tg-uM5"/>
+                                            <constraint firstAttribute="bottom" secondItem="7Gj-4W-soT" secondAttribute="bottom" constant="18" id="hQB-yc-FHs"/>
+                                            <constraint firstAttribute="trailing" secondItem="7Gj-4W-soT" secondAttribute="trailing" constant="67" id="xLn-Ro-HrU"/>
                                         </constraints>
                                     </view>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Ke-1u-XYX">
+                                        <rect key="frame" x="139" y="61" width="97" height="30"/>
+                                        <animations/>
+                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstItem="210-bg-ygu" firstAttribute="centerX" secondItem="MX5-zz-Vdj" secondAttribute="centerX" id="AFD-Bc-2nD"/>
-                                    <constraint firstItem="210-bg-ygu" firstAttribute="leading" secondItem="MX5-zz-Vdj" secondAttribute="leading" id="TxC-gu-Gy5"/>
-                                    <constraint firstItem="210-bg-ygu" firstAttribute="top" secondItem="MX5-zz-Vdj" secondAttribute="top" id="WXu-cQ-It3"/>
-                                    <constraint firstAttribute="trailing" secondItem="210-bg-ygu" secondAttribute="trailing" id="cxV-Hm-8Bs"/>
-                                    <constraint firstAttribute="bottom" secondItem="210-bg-ygu" secondAttribute="bottom" constant="-232" id="mYP-eI-Mva"/>
+                                    <constraint firstAttribute="bottom" secondItem="rRS-gR-HII" secondAttribute="bottom" id="1db-fz-9v1"/>
+                                    <constraint firstItem="rRS-gR-HII" firstAttribute="centerX" secondItem="Z87-Uw-1v2" secondAttribute="centerX" id="BRu-cR-fLh"/>
+                                    <constraint firstAttribute="trailing" secondItem="rRS-gR-HII" secondAttribute="trailing" id="I2c-eN-Ilv"/>
+                                    <constraint firstItem="rRS-gR-HII" firstAttribute="leading" secondItem="Z87-Uw-1v2" secondAttribute="leading" id="gdE-4v-1ST"/>
+                                    <constraint firstItem="rRS-gR-HII" firstAttribute="top" secondItem="Z87-Uw-1v2" secondAttribute="top" id="tMl-oO-eYf"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="MX5-zz-Vdj" firstAttribute="leading" secondItem="fLj-Ks-hst" secondAttribute="leading" id="LdN-wS-gSy"/>
-                            <constraint firstItem="MX5-zz-Vdj" firstAttribute="top" secondItem="tx4-3r-zS5" secondAttribute="bottom" constant="-64" id="ROA-od-QYU"/>
-                            <constraint firstItem="MX5-zz-Vdj" firstAttribute="centerX" secondItem="fLj-Ks-hst" secondAttribute="centerX" id="dGv-Qe-C15"/>
-                            <constraint firstAttribute="trailing" secondItem="MX5-zz-Vdj" secondAttribute="trailing" id="fnu-ux-R46"/>
-                            <constraint firstItem="ztA-KQ-uJw" firstAttribute="top" secondItem="MX5-zz-Vdj" secondAttribute="bottom" id="ggr-eu-x1e"/>
+                            <constraint firstItem="ztA-KQ-uJw" firstAttribute="top" secondItem="Z87-Uw-1v2" secondAttribute="bottom" id="E9H-vI-Gr8"/>
+                            <constraint firstItem="Z87-Uw-1v2" firstAttribute="leading" secondItem="fLj-Ks-hst" secondAttribute="leading" id="fSG-QN-bwa"/>
+                            <constraint firstItem="Z87-Uw-1v2" firstAttribute="top" secondItem="fLj-Ks-hst" secondAttribute="top" id="g4Z-Kg-P84"/>
+                            <constraint firstAttribute="trailing" secondItem="Z87-Uw-1v2" secondAttribute="trailing" id="ujO-jj-jCk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="WsE-6N-4W9"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fm8-ej-0Cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
